// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox SNAPSHOTS should render 1`] = `
<div>
  <div
    class="checkbox-wrapper"
  >
    <input
      class="checkbox-input"
      id="test"
      type="checkbox"
    />
    <label
      class="checkbox-label"
      for="test"
    />
  </div>
</div>
`;

exports[`CheckBox SNAPSHOTS should render controllable mode 1`] = `
<div>
  <div
    class="checkbox-wrapper"
  >
    <input
      checked=""
      class="checkbox-input"
      id="test"
      name="checker"
      type="checkbox"
    />
    <label
      class="checkbox-label"
      for="test"
    />
  </div>
</div>
`;

exports[`CheckBox SNAPSHOTS should render controllable mode 2`] = `
<div>
  <div
    class="checkbox-wrapper"
  >
    <input
      checked=""
      class="checkbox-input"
      id="test"
      name="checker"
      type="checkbox"
    />
    <label
      class="checkbox-label"
      for="test"
    />
  </div>
</div>
`;
